# blog-posts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  convert_marimo_to_jupyter.sh  environment.yml  pyproject.toml
.archived/Controlling for X/: driver.ipynb
.archived/Double Machine Learning Simplified/: driver_p1.ipynb  driver_p2.ipynb
.archived/Optimization, Newton’s Method, & Profit Maximization/: driver.ipynb
.archived/t-SNE from Scratch (ft. NumPy)/.ipynb_checkpoints/: tsne-checkpoint.py
Controlling for X/: driver.ipynb  script.py  table.html
DML/: driver_part2.ipynb  driver_part_1.ipynb
Double Machine Learning Simplified/: driver_p1.ipynb  driver_p2.ipynb
Dynamic DML Simplified/: driver.ipynb
NM Optimization & Price-Science/: Pt-1-Script.ipynb  optimization.py
Optimization/: Main Driver.ipynb  optimization.py
Optimization, Newton’s Method, & Profit Maximization/: driver.ipynb  optimization.py
Predictive Parameters in a Logistic Regression/: driver.ipynb  marg_eff.py
Predictive Params in Logistic Reg/: script.ipynb  script.py
Predictive Params in Logistic Reg/functions/: marg_eff.py
data/: algorithm.webp:Zone.Identifier  dag1  dag2
jupyter/: dml1.ipynb  dml2.ipynb  fwl.ipynb  logistic.ipynb  nm1.ipynb  nm2.ipynb  nm3.ipynb  tsne.ipynb
jupyter/.ipynb_checkpoints/: dml1-checkpoint.ipynb
marimo/: dml1.py  dml2.py  fwl.py  logistic.py  nm1.py  nm2.py  nm3.py  tsne.py
marimo/__marimo__/session/: fwl.py.json  (+2 more)
t-SNE/: backup_tsne.py  main_driver.ipynb  tsne.py
t-SNE from Scratch (ft. NumPy)/: driver.ipynb  tsne.py
