[project]
name = "blog-posts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "econml>=0.15.1",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "ruff>=0.8.5",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shap>=0.43.0",
    "stargazer>=0.0.7",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
]

[tool.ruff]
extend-include = ["*.ipynb"]
