[project]
name = "blog-posts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "econml>=0.15.1",
    "graphviz>=0.20.3",
    "kaleido<0.2.1",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shap>=0.43.0",
    "stargazer>=0.0.7",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
]

[tool.ruff]
extend-include = ["*.ipynb"]
ignore = ["E722"]
exclude = ["marimo/"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]
jupyter = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
marimo = [
    "marimo>=0.11.20",
]
